--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -6,6 +6,8 @@
 # Rewritten to use lists instead of if-statements.
 #
 
+obj-$(CONFIG_RUST_TIMER_EXAMPLE)	+= rust_timer_example.o
+
 obj-y				+= irqchip/
 obj-y				+= bus/
 
